# BinaryKeyboard

./: .gitignore  .gitmodules  README.md  TODO.md  commit_msg.txt  flash.py  run.py  run.sh  setup.py
.github/: AI_CODE_REVIEW_SETUP.md  BRANCH_PROTECTION.md  COPILOT_REVIEW.md  codeql-config.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: releases_to_md.py
.github/workflows/: build-docker-image.yml  code-quality.yml  deploy-docs.yml  firmware-build.yml  release.yml  sync-changelog.yml
Firmware/CH592F/: .cproject  .gitignore  .project  .template  CH592F.launch  CH592F.wvproj
Hardware/CH552/: CH552.ino
Hardware/test/: test.py
Models/: FiveKeysBox.shapr  FiveKeysPlate.shapr  FiveKeysPlateCube.shapr  KnobPlate.shapr  KnobPlateCube.shapr
Models/blender/: 未命名.blend  未命名.blend1
Software/binary-keyboard-studio-ui/: .eslintrc.cjs  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
UI/binary-keyboard-studio-ui/: pnpm-lock.yaml
config/: versions.json
docker/builder/: Dockerfile
docs/: .gitignore  DEPLOY.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  changelog.md  development.md  faq.md  index.html  index.md  license.md  meowfs.md  meowmacro.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  usage.md
docs/.vitepress/: config.ts  meowmacro-language.ts
docs/classic/: dev.md  make.md  remap.md
docs/dev/: firmware.md  hid.md
docs/guide/: flash.md  make.md  quickstart.md  remap.md
docs/scripts/: sync-changelog.mjs
docs/wired/: dev.md  flash.md  index.md  remap.md
docs/wireless/: ble.md  dataflash.md  dev-tools.md  dev.md  flash.md  hid.md  index.md  make.md  remap.md  rgb-architecture.md  tmos.md
examples/: README.md
firmware/: CMakeLists.txt
firmware/CH552G/: .gitignore  CMakeLists.txt  README.md
firmware/CH552G/SDK/cores/: Print.h  main.c
firmware/CH552G/SDK/libraries/WS2812/: WS2812.h
firmware/CH552G/SDK/libraries/WS2812/template/: WS2812_pins_header.h
firmware/CH552G/User/: Main.c
firmware/CH552G/app/: config.h  entry.c  main.c
firmware/CH552G/app/keyboard/: KeysDataHandler.h
firmware/CH552G/app/lighting/: rgb.c
firmware/CH552G/bsp/: ch552_defs.h  ch552_eeprom.c  ch552_flash.c  ch552_sys.c  ch552_timer.c
firmware/CH552G/cmake/: ch552.peep  toolchain-ch552.cmake
firmware/CH552G/hal/: hal.c
firmware/CH552G/keyboard/: EncoderHandler.c  KeyScanner.c  KeyScanner.h  KeysDataHandler.c  KeysDataHandler.h  LightingController.c  LightingController.h  MacroStorage.c  MacroStorage.h  rgb.c  rgb.h
firmware/CH552G/src/: CustomUSBHID.c  EncoderHandler.c  EncoderHandler.h  KeyScanner.c  KeyScanner.h  KeysDataHandler.c  KeysDataHandler.h  LightingController.c  config.h  rgb.c  rgb.h
firmware/CH552G/usb/: CustomUSBHID.c  CustomUSBHID.h  USBConstant.c  USBConstant.h  USBHandler.c  USBHandler.h
firmware/CH592F/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
firmware/CH592F/Board/include/: kbd_config.h  key.h  ws2812.h
firmware/CH592F/Board/src/: hal_utils.c  key.c
firmware/CH592F/Ld/: Link.ld
firmware/CH592F/MeowBLE/core/include/: ble_config.h
firmware/CH592F/MeowBLE/core/src/: ble_mcu.c
firmware/CH592F/MeowBLE/hid/include/: ble_hid.h  ble_hid_service.h  kbd_mode.h  kbd_mode_config.h
firmware/CH592F/MeowBLE/hid/src/: ble_hid.c  ble_hid_service.c  kbd_mode.c
firmware/CH592F/MeowBLE/lib/: CH59xBLE_LIB.h
firmware/CH592F/MeowBLE/profile/src/: battservice.c  devinfoservice.c  hiddev.c
firmware/CH592F/MeowKeyboard/include/: kbd_core.h  kbd_log.h  kbd_rgb.h  kbd_storage.h  kbd_types.h
firmware/CH592F/MeowKeyboard/src/: kbd_command.c  kbd_core.c  kbd_log.c  kbd_rgb.c  kbd_storage.c
firmware/CH592F/MeowUSB/include/: usb_device.h  usb_hid.h
firmware/CH592F/MeowUSB/src/: usb_descriptors.c  usb_device.c  usb_hid.c
firmware/CH592F/StdPeriphDriver/: CH59x_spi0.c  CH59x_timer1.c
firmware/CH592F/StdPeriphDriver/inc/: ISP592.h
firmware/CH592F/User/: Main.c
firmware/CH592F/app/: Main.c
firmware/CH592F/ble/hid/include/: ble_hid.h  ble_hid_service.h  kbd_mode.h  kbd_mode_config.h
firmware/CH592F/ble/hid/src/: ble_hid.c  ble_hid_service.c  kbd_mode.c
firmware/CH592F/ble/profile/include/: battservice.h
firmware/CH592F/ble/profile/src/: battservice.c  devinfoservice.c  hiddev.c  scanparamservice.c
firmware/CH592F/bootloader/: CMakeLists.txt  main.c
firmware/CH592F/bootloader/Ld/: Link.ld
firmware/CH592F/cmake/: toolchain-ch59x.cmake
firmware/CH592F/hal/include/: debug.h  encoder.h  hal_utils.h  kbd_battery.h  kbd_config.h  key.h  ws2812.h
firmware/CH592F/hal/src/: encoder.c  hal_utils.c  kbd_battery.c  key.c  ws2812.c
firmware/CH592F/iap/: iap_config.h
firmware/CH592F/jump_iap/: CMakeLists.txt
firmware/CH592F/jump_iap/Ld/: Link.ld
firmware/CH592F/jump_iap/Startup/: startup_CH592.S
firmware/CH592F/keyboard/include/: kbd_command.h  kbd_iap.h  kbd_macro.h  kbd_rgb.h  kbd_storage.h  kbd_types.h
firmware/CH592F/keyboard/src/: kbd_command.c  kbd_core.c  kbd_iap.c  kbd_log.c  kbd_macro.c  kbd_rgb.c  kbd_storage.c
firmware/CH592F/usb/include/: usb_descriptors.h  usb_hid.h
firmware/CH592F/usb/src/: usb_descriptors.c  usb_device.c  usb_hid.c
firmware/cmake/: BinaryKeyboardFirmware.cmake
model/: 5KeysEditon.shapr  KnobBox.shapr
models/: BaseEditon.shapr  KnobBox.shapr  KnobPlateCube.shapr
tools/meowisp/: Cargo.toml  README.md
tools/meowisp/crates/meowisp-app/: Cargo.toml  build.rs
tools/meowisp/crates/meowisp-app/src/: main.rs
tools/meowisp/crates/meowisp-app/ui/: app.slint
tools/scripts/: build-vercel.mjs  build_report.py  ch552g.py  ch592f.py  ch592f_console.py  common.py  console.py  firmware_naming.py  flash.py  i18n.py  render_size_table.py  setup.py  sync_pages_firmware.py  tool_cache.py  tui_console.py  tui_textual.py  tui_textual.tcss  versioning.py
tools/studio/: .gitignore  README.md  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.node.json  tsconfig.vitest.json  (+1 more)
(+230 files in other folders)
